<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity"
    android:background="@color/black"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvApp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/bgApp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <TextView
                android:id="@+id/tvRestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurantName"
                android:textColor="@color/text"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="50dp"
                android:textAlignment="center"
                android:paddingTop="10dp"/>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvTwoSeats"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/bgCompSel"
                    app:cardCornerRadius="16dp"
                    android:layout_gravity="center"
                    >

                    <LinearLayout
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:src="@drawable/ic_table"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/twoSeats"
                            android:layout_marginTop="10dp"
                            android:textAllCaps="false"
                            android:textColor="@color/otherTexts"
                            android:textStyle="bold"
                            />

                    </LinearLayout>




                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvFourSeats"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/bgComp"
                    app:cardCornerRadius="16dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="8dp">
                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:src="@drawable/ic_table"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fourSeats"
                            android:layout_marginTop="10dp"
                            android:textAllCaps="false"
                            android:textColor="@color/otherTexts"
                            android:textStyle="bold"
                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvEightSeats"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/bgComp"
                    app:cardCornerRadius="16dp"
                    android:layout_gravity="center"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="8dp">
                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:src="@drawable/ic_table"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/eightSeats"
                            android:layout_marginTop="10dp"
                            android:textAllCaps="false"
                            android:textColor="@color/otherTexts"
                            android:textStyle="bold"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/insertName"
                    android:textColor="@color/text"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/bgTextBox"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/name..."
                    android:textColorHint="@color/otherTexts"
                    >

                </EditText>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_arrowleft"
                    app:backgroundTint="@color/teal_200"
                    app:maxImageSize="40dp"
                    app:tint="@color/black">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:background="@color/bgComp"
                    android:layout_marginRight="-32dp"
                    android:layout_marginLeft="-32dp"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/tvTime"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="30dp"
                        android:textColor="@color/otherTexts"
                        />


                </LinearLayout>



                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_200"
                    android:src="@drawable/ic_arrowright"
                    android:tint="@color/white"
                    android:contentDescription="TODO"
                    app:maxImageSize="40dp">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>
            </LinearLayout>


        </LinearLayout>



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ok"
                app:backgroundTint="@color/teal_200"
                app:maxImageSize="40dp"
                app:tint="@color/black"
                android:layout_gravity="bottom|end"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                >

            </com.google.android.material.floatingactionbutton.FloatingActionButton>






    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>